# bullish_detector

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  polymarket_scraper.py  polymarket_scraper_wip.py
src/scraping_data/: polymarket_scraper.py
tests/: test_main.py  test_polymarket_scraper.py
tests/fixture_data/: polymarket_scraper_fixture_data.py
