[project]
name = "bullish-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]
[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.ruff]
# 1. Match Black's line length so they don't fight
line-length = 120

[tool.ruff.lint]
# 2. Add "I" to the list of rules to enable Import Sorting
# E = pycodestyle errors, F = Pyflakes (bugs), I = Isort
select = ["E", "F", "I", "B", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"**/__init__.py" = ["D104"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["^tests/"]
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20260107",
]
